# gspeechtts

./: README.md  pyproject.toml
gspeechtts/: __init__.py  core.py
gspeechtts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
