
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gspeechtts"
version = "0.1.0"
description = "Unofficial GSpeech.io Text-to-Speech Python client"
authors = [{name = "Gabriel Salem"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[project.urls]
Homepage = "https://gspeech.io"
